--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -7,6 +7,7 @@
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{remark}{Remark}
 \renewcommand{\qedsymbol}{$\blacksquare$}
 
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
@@ -59,7 +60,7 @@ Observe that now the relevant constraint is that the velocity $\dot x_{k+1}$ mus
 
 Such that when the block is moving, $\lambda_{k+1} = \mu g$ (i.e. the maximum friction force is being used to oppose the motion), and when the block is stationary $\lambda_{k+1} < \mu g$ (i.e. some smaller static friction force is being used). To encode this constraint as an LCP, we introduce the new variable $\lambda'_{k+1} = \mu g - \lambda_{k+1}$, where $\lambda '_{k+1}$ intuitively represents the ``unused" friction force. Furthermore, since we are interested in bounding velocity we will instead just use the second EOM:
 \begin{align*}
-    \dot x_{k+1} &= \dot x_k + (u_{k+1} - \lambda_{k+1}) \Delta t \\
+    \dot x_{k+1} &= \dot x_k + (u_{k+1} - \lambda_{k+1}) \Delta t  \numberthis \label{fwd_eom} \\
     \dot x_{k+1} &= \dot x_k + (u_{k+1} + \lambda'_{k+1} - \mu g) \Delta t \\
     \dot x_{k+1} &= \Delta t \cdot \lambda'_{k+1} + \dot x_k + \Delta t (u_{k+1} - \mu g) \\
     \lambda'_{k+1} &= \frac{1}{\Delta t} \dot x_{k+1} - \frac{1}{\Delta t} (\dot x_k + \Delta t (u_{k+1} - \mu g))\\
@@ -76,6 +77,10 @@ We can now write the LCP:
 
 With $M = \frac{1}{\Delta t}$ and $q = - \frac{1}{\Delta t} \dot x_k - u_{k+1} + \mu g$ from the equation above.
 
+\begin{remark}
+    It might seem that the above constraints are insufficient; what would prevent a negative friction force in sticking? Consider the case where $\lambda'_{k+1} > \mu g$; i.e., $\lambda_{k+1} < 0$. If $\lambda_{k+1} < 0$, we can immediately see that the right hand side of $\eqref{fwd_eom}$ must be strictly greater than zero because of our nonnegativity constraints on $\dot x_k$ and $u_{k+1}$. That means that $\dot x_{k+1} > 0$ and therefore $\lambda'_{k+1} = 0$. This proves that $\lambda_{k+1}$ is always positive even though we never encoded that explicitely as a constraint. Intuitively, one can think of this as ``our friction force can never propel the block, since if that happened the velocity would be immediately positive and friction must always oppose motion."
+\end{remark}
+
 \subsection{Bidirectional case}
 For the bidirectional case we need to introduce more slack variables: $\dot x_{k+1}^+$, $\dot x_{k+1}^-$, $\lambda_{k+1}^+$, and $\lambda_{k+1}^-$, which are all positive numbers representing velocity / friction force in the + / - direction. We can then write:
 \begin{align*}
@@ -83,7 +88,7 @@ For the bidirectional case we need to introduce more slack variables: $\dot x_{k
     0 \leq \mu g - \lambda_{k+1}^+ &\perp \dot x_{k+1}^- \geq 0
 \end{align*}
 
-We again perform the substitution $\lambda'^+_{k+1} = \mu g - \lambda_{k+1}^+$ and $\lambda'^-_{k+1} = \mu g - \lambda_{k+1}^-$. We can now solve the EOM for both $\dot x^+_{k+1}$ and $\dot x^-_{k+1}$. Observe that instead of just $u_{k+1}$, we also need to subtract the force required to bring the complementary velocity to zero in one time step.
+We again perform the substitution $\lambda'^+_{k+1} = \mu g - \lambda_{k+1}^+$ and $\lambda'^-_{k+1} = \mu g - \lambda_{k+1}^-$. We can now write the EOM for both $\dot x^+_{k+1}$ and $\dot x^-_{k+1}$. The first equation looks familiar to the forwards case, with the addition of a term involving $\dot x^-_k$. The importance of this term comes when the block changes direction, in this case from a negative velocity to a positive velocity. In order for the positive velocity component to begin increasing, we need to ensure that the negative velocity from the previous timestep has been driven completely to zero. This does not correspond to an actual physical force; it is more of a force threshold that the input $u_{k+1}$ must overcome in order to begin increasing the block's positive velocity.
 \begin{align*}
     \dot x^+_{k+1} &= \dot x^+_k + (u_{k+1} - \frac{1}{\Delta t} \dot x^-_{k} - \lambda^-_{k+1}) \Delta t \\
     \dot x^+_{k+1} &= \dot x^+_k + (u_{k+1} - \frac{1}{\Delta t} \dot x^-_{k} + \lambda'^-_{k+1} - \mu g) \Delta t \\
@@ -120,7 +125,7 @@ We can now put these in matrix form as:
     \end{bmatrix}
 \]
 
-This equation gives us the form of our $M$ matrix and $q$ vector. Note that the order of the equations is important; if we had stacked the $\lambda'^+_{k+1}$ on top of $\lambda'^-_{k+1}$, our resulting $M$ matrix would not be positive semidefinite (Lemke algorithm gives secondary rays). Furthermore, we would not get the desired complementarity constraints below:
+This equation gives us the form of our $M$ matrix and $q$ vector. We also have the below constraints:
 \begin{align*}
     \lambda'^+_{k+1} &\geq 0\\
     \lambda'^-_{k+1} &\geq 0 \\
@@ -143,14 +148,24 @@ Finally, we can just update the positions by:
 \begin{proof}
 Since $\dot x^+_k$ and $\dot x^-_k$ are both optimization variables they are not immediately constrained to be complimentary; however, this ends up being the case. Empirically, this constraint was never violated for about 30,000 time steps with random forces using the above formulation.  It can also formally be proven via induction (assuming $\Delta t = 1$ for notational cleanliness):
 
-Assume $\dot x^+_k \perp \dot x^-_k$; we want to show that $\dot x^+_{k+1} \perp \dot x^-_{k+1}$. Observe that the base case is trivial (assign all of $\dot x_0$ to the appropriate direction and set the other direction to zero). Now assume WLOG of generality that from our induction hypothesis we have $\dot x^+_k = 0$. We can then write:
+Assume $\dot x^+_k \perp \dot x^-_k$; we want to show that $\dot x^+_{k+1} \perp \dot x^-_{k+1}$. Observe that the base case is trivial (assign all of $\dot x_0$ to the appropriate direction and set the other direction to zero). Now assume WLOG that from our induction hypothesis we have $\dot x^+_k = 0$. Also assume for sake of contradiction that both $\dot x^+_{k+1}$ and $\dot x^-_{k+1}$ are strictly positive. We can then write:
 \begin{align*}
-    \dot x^+_{k+1} &= \dot x^+_k + u_{k+1} - \dot x^-_{k} - \lambda^-_{k+1} = u_{k+1} - \dot x^-_k - \lambda^-_{k+1} \leq u_{k+1} - \dot x^-_k\\
-    \dot x^-_{k+1} &= \dot x^-_k - u_{k+1} - \dot x^+_{k} - \lambda^+_{k+1} = -u_{k+1} + \dot x^- _k - \lambda^+_{k+1} \leq -(u_{k+1} - \dot x^-_k)
+    \dot x^+_{k+1} &= \dot x^+_k + u_{k+1} - \dot x^-_{k} - \lambda^-_{k+1} \\
+                   &= u_{k+1} - \dot x^-_k - (\mu g - \lambda'^-_{k+1}) \\
+                   &= u_{k+1} - \dot x^-_k - \mu g \quad \textrm{by complimentarity}\\
+                   &\leq u_{k+1} - \dot x^-_k\\
+    \dot x^-_{k+1} &= \dot x^-_k - u_{k+1} - \dot x^+_{k} - \lambda^+_{k+1} \\
+                   &= -u_{k+1} + \dot x^- _k - (\mu g - \lambda'^+_{k+1}) \\
+                   &= -u_{k+1} + \dot x^- _k - \mu g \quad \textrm{by complimentarity} \\
+                   &\leq -(u_{k+1} - \dot x^-_k)
 \end{align*}
 
-It is now easy to see that one of $\dot x^+_{k+1}$ or $\dot x^-_{k+1}$ must be nonpositive; the only way this can satisfy the nonnegativity constraint is for the corresponding velocity in the next time step to be zero, satisfying $\dot x^+_{k+1} \perp \dot x^-_{k+1}$.
+It is now easy to see that one of $\dot x^+_{k+1}$ or $\dot x^-_{k+1}$ must be nonpositive--which is a contradiction because we assumed them to be strictly positive. Therefore we have proven the induction step.
 \end{proof}
+
+\begin{remark}
+    It seems that if $u_{k+1} - \dot x^-_k \neq 0$ the above two inequalities would force one of the velocities to be strictly negative, violating the nonnegativity constraints. However, note that this only occurs because of our contradictory assumption that both $\dot x^+_{k+1}$ and $\dot x^-_{k+1}$ are strictly positive. In reality, one would need to be zero, which would free up the complementary $\lambda'$ to be arbitrarily positive.
+\end{remark}
 
 \subsubsection{Summed velocity}
 
@@ -163,9 +178,9 @@ Let's double check what happens when we add our velocities to get the overall ve
 
 At first glance, the factors of 2 don't look quite right (why is velocity doubling every timestep?). However, this is actually not an issue.
 
-The reason why is pretty unintuitive and has to do with the fact that our friction forces are being encoded as the slack variables $w = Mz + q$. The best way to see this is with a simple example. Assume that the block is moving with a constant rightwards velocity $\dot x^+_k = \dot x^+_{k+1} = 1$, and frictional / input forces are zero. Then by the above lemma, we have $\dot x^-_k = \dot x^-_{k+1} = 0$; the corresponding variables $\lambda'^+_{k}$ and $\lambda'^+_{k+1}$ are now free to vary. We can now satisfy equation \eqref{cont} by letting $\lambda'^+_{k+1} = 1$ (this is what the LCP outputs as well). Observe that since $\mu g = 0$, this actual creates a fictitious force $\lambda^+_{k+1} = -1$ which prevents the block from increasing in velocity and keeps it moving in a straight line.
+The reason why is pretty unintuitive and has to do with the fact that our friction forces are being encoded as the slack variables $w = Mz + q$. The best way to see this is with a simple example. Assume that the block is moving with a constant rightwards velocity $\dot x^+_k = \dot x^+_{k+1} = 1$, and frictional / input forces are zero. Then by the above lemma, we have $\dot x^-_k = \dot x^-_{k+1} = 0$; the corresponding variable $\lambda'^+_{k+1}$ is now free to vary. We can now satisfy equation \eqref{cont} by letting $\lambda'^+_{k+1} = 1$ (this is what the LCP outputs as well). Observe that since $\mu g = 0$, this actual creates a fictitious force $\lambda^+_{k+1} = -1$ which prevents the block from increasing in velocity and keeps it moving in a straight line.
 
-Essentially, we structured the problem in a way that the slack variable $w = Mz + q$ had rough physical meaning; it's not trivial to extract the corresponding friction forces but is also not too tricky (see process\_sliding\_solution in dynamics.py). The nice thing about this formulation is that $M$ is 2x2 and a multiple of the identity and therefore positive definite, so we're guaranteed a unique LCP solution. We also managed to use 2 complimentarity constraints instead of 3.
+Essentially, we structured the problem in a way that the slack variable $w = Mz + q$ had rough physical meaning. Unless the block is at rest with no external force, there is always a physical positive friction force in one direction, and a fictitious negative friction force in the opposite direction. The nice thing about this formulation is that $M$ is 2x2 and a multiple of the identity and therefore positive definite, so we're guaranteed a unique LCP solution. We also managed to use 2 complimentarity constraints instead of 3.
 
 TODO: reformulate using the traditional slack variable method
 
