--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -329,7 +329,7 @@ Now assume that we know the slack friction forces vector $\vec{\lambda'} = \rvec
 \end{remark}
 
 \begin{remark}
-    I think going about this by penalizing LCP violations is not the right path forward. Instead, we should be using the fact that velocities are decomposed to help enforce sticking. More specifically, we should probably relu the output to allow totally zero velocities to be produced.
+    I think going about this by penalizing LCP violations is not the right path forward. Instead, we should be using the fact that velocities are decomposed to help enforce sticking. More specifically, we should probably relu the output to allow totally zero velocities to be produced. Update: this works! But unless we can formulate velocity in this complementary framework doesn't really generalize well.
 \end{remark}
 
 \begin{remark}
@@ -355,7 +355,11 @@ This would give us the friction forces, from which we could calculate $\dot x_{k
 Furthermore, I don't think the traditional way is capable of encoding sticking. If you keep your velocity as a real number, there's no meaningful way of constraining it to be zero in the next time step under sticking. However, if you decompose velocity into positive and negative components, you could potentially RELU the two output velocities to help give you that nonlinear sticking behavior. 
 
 \subsection{Unknown frictional forces}
-What if we don't know the friction forces? Then we definitely need to solve an LCP on every training iteration for both the friction and velocities.
+What if we don't know the friction forces? Then we definitely need to solve an LCP on every training iteration for both the friction and velocities. Under the traditional framework, we would learn $\vec{f}$ and $G$, use those to solve for the friction forces, then calculate $\dot x_{k+1}$ from there. The issue here is, can we predict sticking and sliding if there is noise on $\vec{f}$ and $G$? I looked at this in \textit{lcp\_study.py}. It turns out if only single elements of $M$ and $\vec{q}$ are perturbed, the solution is usually stable (sticking is observed). However, as soon as we add random noise, this breaks down. When $u=0$ we sometimes coincidentally get the right answer if all the $\vec{q}$ elems are strictly positive (gives zero friction forces as trivial solution). However, as soon as $u \neq 0$, we need a precise nonzero friction force equal to $-u$ to induce sticking. Random noise makes this impossible.
 
-Experiment with modulating LCP 
+\section{Random ideas}
+\begin{itemize}
+    \item Markov random field / Markov chain for state transitions. Captures multimodality. However, continuous and multidimensional state space is an issue. Could potentially use stick/slip/detach as states instead.
+    \item Generalizing direct formulation to non-full-rank jacobian scenarios
+\end{itemize}
 \end{document}
